<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, gamedroid!</string>
    <string name="app_name">gamedroid</string>
    <string name="start_game">START GAME</string>
    <string name="exit_game">EXIT GAME</string>
    <string name="help">HELP</string>
    <string name="about">ABOUT</string>
    <string name="score">SCORE</string>
    <string name="time">TIME</string>
    <string name="turn">This is Turn # 1</string>
    <string name="pickagain">PICK AGAIN</string>
    <string name="go">GO</string>
    <string name="tryagain">Try again !</string>
    <string name="goodclick">Good Click !</string>
    <string name="gameover">Congratulation Game Over</string>
    <string name="gamerules">Game Rules</string>
</resources>
